// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`example scenes golden snapshots > chart-buildup evaluates deterministically 1`] = `
{
  "ops": [
    {
      "id": "axis",
      "opacity": 1,
      "stroke": "#444444",
      "strokeWidth": 3,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "line",
      "x1": 336,
      "x2": 336,
      "y1": 820,
      "y2": 820,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-0",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-1",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        630,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-2",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        900,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-3",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1170,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-4",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1440,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
  ],
  "t": 0,
}
`;

exports[`example scenes golden snapshots > chart-buildup evaluates deterministically 2`] = `
{
  "ops": [
    {
      "align": "left",
      "baseline": "top",
      "content": "Weekly Active Users",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 44,
      "fontWeight": 700,
      "id": "title",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        100,
      ],
      "type": "text",
    },
    {
      "id": "axis",
      "opacity": 1,
      "stroke": "#444444",
      "strokeWidth": 3,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "line",
      "x1": 336,
      "x2": 1584,
      "y1": 820,
      "y2": 820,
    },
    {
      "fill": "#3B82F6",
      "height": 280,
      "id": "bar-0",
      "offsetX": -0,
      "offsetY": -280,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 473.3333333333333,
      "id": "bar-1",
      "offsetX": -0,
      "offsetY": -473.3333333333333,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        630,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 366.6666666666667,
      "id": "bar-2",
      "offsetX": -0,
      "offsetY": -366.6666666666667,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        900,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 600,
      "id": "bar-3",
      "offsetX": -0,
      "offsetY": -600,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1170,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 426.6666666666667,
      "id": "bar-4",
      "offsetX": -0,
      "offsetY": -426.6666666666667,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1440,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "42",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-0",
      "letterSpacing": 0,
      "opacity": 0.9999829211786756,
      "transform": [
        1,
        0,
        0,
        1,
        420,
        524.0047820699708,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "71",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-1",
      "letterSpacing": 0,
      "opacity": 0.9986166154727197,
      "transform": [
        1,
        0,
        0,
        1,
        690,
        331.321468676246,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "54",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-2",
      "letterSpacing": 0,
      "opacity": 0.9893257366722199,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        441.24722988685267,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "86",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-3",
      "letterSpacing": 0,
      "opacity": 0.95899375,
      "transform": [
        1,
        0,
        0,
        1,
        1230,
        228.60375,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "57",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-4",
      "letterSpacing": 0,
      "opacity": 0.8879458532902956,
      "transform": [
        1,
        0,
        0,
        1,
        1500,
        425.1431025961405,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Mon",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-0",
      "letterSpacing": 0,
      "opacity": 0.7499489769887544,
      "transform": [
        1,
        0,
        0,
        1,
        420,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Tue",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-1",
      "letterSpacing": 0,
      "opacity": 0.5122117841524364,
      "transform": [
        1,
        0,
        0,
        1,
        690,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Wed",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-2",
      "letterSpacing": 0,
      "opacity": 0.13538467044981217,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        844,
      ],
      "type": "text",
    },
  ],
  "t": 0.25,
}
`;

exports[`example scenes golden snapshots > chart-buildup evaluates deterministically 3`] = `
{
  "ops": [
    {
      "align": "left",
      "baseline": "top",
      "content": "Weekly Active Users",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 44,
      "fontWeight": 700,
      "id": "title",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        100,
      ],
      "type": "text",
    },
    {
      "id": "axis",
      "opacity": 1,
      "stroke": "#444444",
      "strokeWidth": 3,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "line",
      "x1": 336,
      "x2": 1584,
      "y1": 820,
      "y2": 820,
    },
    {
      "fill": "#3B82F6",
      "height": 280,
      "id": "bar-0",
      "offsetX": -0,
      "offsetY": -280,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 473.3333333333333,
      "id": "bar-1",
      "offsetX": -0,
      "offsetY": -473.3333333333333,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        630,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 366.6666666666667,
      "id": "bar-2",
      "offsetX": -0,
      "offsetY": -366.6666666666667,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        900,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 600,
      "id": "bar-3",
      "offsetX": -0,
      "offsetY": -600,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1170,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 426.6666666666667,
      "id": "bar-4",
      "offsetX": -0,
      "offsetY": -426.6666666666667,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1440,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "42",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-0",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        420,
        524,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "71",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-1",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        690,
        330.6666666666667,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "55",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-2",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        437.3333333333333,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "90",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-3",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1230,
        204,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "64",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-4",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1500,
        377.3333333333333,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Mon",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-0",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        420,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Tue",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-1",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        690,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Wed",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-2",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Thu",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-3",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1230,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Fri",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-4",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1500,
        844,
      ],
      "type": "text",
    },
  ],
  "t": 0.5,
}
`;

exports[`example scenes golden snapshots > chart-buildup evaluates deterministically 4`] = `
{
  "ops": [
    {
      "align": "left",
      "baseline": "top",
      "content": "Weekly Active Users",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 44,
      "fontWeight": 700,
      "id": "title",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        100,
      ],
      "type": "text",
    },
    {
      "id": "axis",
      "opacity": 1,
      "stroke": "#444444",
      "strokeWidth": 3,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "line",
      "x1": 336,
      "x2": 1584,
      "y1": 820,
      "y2": 820,
    },
    {
      "fill": "#3B82F6",
      "height": 280,
      "id": "bar-0",
      "offsetX": -0,
      "offsetY": -280,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 473.3333333333333,
      "id": "bar-1",
      "offsetX": -0,
      "offsetY": -473.3333333333333,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        630,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 366.6666666666667,
      "id": "bar-2",
      "offsetX": -0,
      "offsetY": -366.6666666666667,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        900,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 600,
      "id": "bar-3",
      "offsetX": -0,
      "offsetY": -600,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1170,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 426.6666666666667,
      "id": "bar-4",
      "offsetX": -0,
      "offsetY": -426.6666666666667,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1440,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "42",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-0",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        420,
        524,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "71",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-1",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        690,
        330.6666666666667,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "55",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-2",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        437.3333333333333,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "90",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-3",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1230,
        204,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "bottom",
      "content": "64",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 36,
      "fontWeight": 700,
      "id": "value-4",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1500,
        377.3333333333333,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Mon",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-0",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        420,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Tue",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-1",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        690,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Wed",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-2",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Thu",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-3",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1230,
        844,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "top",
      "content": "Fri",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "label-4",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        1500,
        844,
      ],
      "type": "text",
    },
  ],
  "t": 0.75,
}
`;

exports[`example scenes golden snapshots > chart-buildup evaluates deterministically 5`] = `
{
  "ops": [
    {
      "id": "axis",
      "opacity": 1,
      "stroke": "#444444",
      "strokeWidth": 3,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "line",
      "x1": 336,
      "x2": 336,
      "y1": 820,
      "y2": 820,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-0",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        360,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-1",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        630,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-2",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        900,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-3",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1170,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
    {
      "fill": "#3B82F6",
      "height": 0,
      "id": "bar-4",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 8,
      "transform": [
        1,
        0,
        0,
        1,
        1440,
        820,
      ],
      "type": "rect",
      "width": 120,
    },
  ],
  "t": 1,
}
`;

exports[`example scenes golden snapshots > kinetic-typo evaluates deterministically 1`] = `
{
  "ops": [],
  "t": 0,
}
`;

exports[`example scenes golden snapshots > kinetic-typo evaluates deterministically 2`] = `
{
  "ops": [
    {
      "align": "center",
      "baseline": "middle",
      "content": "DESIGN",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-0",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        240,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "IS",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-1",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        390,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "HOW",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-2",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        540,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "IT",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-3",
      "letterSpacing": 0,
      "opacity": 0.8487654320987652,
      "transform": [
        1.0776543209876543,
        0,
        0,
        1.0776543209876543,
        960,
        690,
      ],
      "type": "text",
    },
  ],
  "t": 0.25,
}
`;

exports[`example scenes golden snapshots > kinetic-typo evaluates deterministically 3`] = `
{
  "ops": [
    {
      "align": "center",
      "baseline": "middle",
      "content": "DESIGN",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-0",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        240,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "IS",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-1",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        390,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "HOW",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-2",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        540,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "IT",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-3",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        690,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "WORKS",
      "fill": "#FF4D00",
      "fontFamily": "Inter",
      "fontSize": 140,
      "fontWeight": 800,
      "id": "word-4",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        840,
      ],
      "type": "text",
    },
  ],
  "t": 0.5,
}
`;

exports[`example scenes golden snapshots > kinetic-typo evaluates deterministically 4`] = `
{
  "ops": [
    {
      "align": "center",
      "baseline": "middle",
      "content": "DESIGN",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-0",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        240,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "IS",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-1",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        390,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "HOW",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-2",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        540,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "IT",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 96,
      "fontWeight": 800,
      "id": "word-3",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        690,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "WORKS",
      "fill": "#FF4D00",
      "fontFamily": "Inter",
      "fontSize": 140,
      "fontWeight": 800,
      "id": "word-4",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        840,
      ],
      "type": "text",
    },
  ],
  "t": 0.75,
}
`;

exports[`example scenes golden snapshots > kinetic-typo evaluates deterministically 5`] = `
{
  "ops": [],
  "t": 1,
}
`;

exports[`example scenes golden snapshots > logo-reveal evaluates deterministically 1`] = `
{
  "ops": [],
  "t": 0,
}
`;

exports[`example scenes golden snapshots > logo-reveal evaluates deterministically 2`] = `
{
  "ops": [
    {
      "fill": "#FF4D00",
      "height": 220,
      "id": "disc",
      "offsetX": -110,
      "offsetY": -110,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        484.2158998187931,
      ],
      "type": "ellipse",
      "width": 220,
    },
    {
      "fill": "#0A0A0C",
      "height": 88,
      "id": "mark",
      "offsetX": -44,
      "offsetY": -44,
      "opacity": 1,
      "radius": 18,
      "transform": [
        0.9995099267706387,
        0.03130345487246667,
        -0.03130345487246667,
        0.9995099267706387,
        960,
        484.2158998187931,
      ],
      "type": "rect",
      "width": 88,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "reframe",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 84,
      "fontWeight": 700,
      "id": "wordmark",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        674.2158998187931,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "motion, declared",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 30,
      "fontWeight": 400,
      "id": "tagline",
      "letterSpacing": 0,
      "opacity": 0.9967955650155952,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        754.3120328683252,
      ],
      "type": "text",
    },
  ],
  "t": 0.25,
}
`;

exports[`example scenes golden snapshots > logo-reveal evaluates deterministically 3`] = `
{
  "ops": [
    {
      "fill": "#FF4D00",
      "height": 220,
      "id": "disc",
      "offsetX": -110,
      "offsetY": -110,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        474.0004737347771,
      ],
      "type": "ellipse",
      "width": 220,
    },
    {
      "fill": "#0A0A0C",
      "height": 88,
      "id": "mark",
      "offsetX": -44,
      "offsetY": -44,
      "opacity": 1,
      "radius": 18,
      "transform": [
        0.9982496226374356,
        -0.05914127918989866,
        0.05914127918989866,
        0.9982496226374356,
        960,
        474.0004737347771,
      ],
      "type": "rect",
      "width": 88,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "reframe",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 84,
      "fontWeight": 700,
      "id": "wordmark",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        664.0004737347771,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "motion, declared",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 30,
      "fontWeight": 400,
      "id": "tagline",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        744.0004737347771,
      ],
      "type": "text",
    },
  ],
  "t": 0.5,
}
`;

exports[`example scenes golden snapshots > logo-reveal evaluates deterministically 4`] = `
{
  "ops": [
    {
      "fill": "#FF4D00",
      "height": 220,
      "id": "disc",
      "offsetX": -110,
      "offsetY": -110,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        484.32185414932746,
      ],
      "type": "ellipse",
      "width": 220,
    },
    {
      "fill": "#0A0A0C",
      "height": 88,
      "id": "mark",
      "offsetX": -44,
      "offsetY": -44,
      "opacity": 1,
      "radius": 18,
      "transform": [
        0.9990992850765389,
        -0.04243369603922009,
        0.04243369603922009,
        0.9990992850765389,
        960,
        484.32185414932746,
      ],
      "type": "rect",
      "width": 88,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "reframe",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 84,
      "fontWeight": 700,
      "id": "wordmark",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        674.3218541493275,
      ],
      "type": "text",
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "motion, declared",
      "fill": "#8B93A7",
      "fontFamily": "Inter",
      "fontSize": 30,
      "fontWeight": 400,
      "id": "tagline",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        754.3218541493275,
      ],
      "type": "text",
    },
  ],
  "t": 0.75,
}
`;

exports[`example scenes golden snapshots > logo-reveal evaluates deterministically 5`] = `
{
  "ops": [],
  "t": 1,
}
`;

exports[`example scenes golden snapshots > lower-third evaluates deterministically 1`] = `
{
  "ops": [],
  "t": 0,
}
`;

exports[`example scenes golden snapshots > lower-third evaluates deterministically 2`] = `
{
  "ops": [
    {
      "fill": "#FF4D00",
      "height": 110,
      "id": "bar",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        120,
        860,
      ],
      "type": "rect",
      "width": 6,
    },
    {
      "align": "left",
      "baseline": "top",
      "content": "Kiyeon Jeon",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 48,
      "fontWeight": 700,
      "id": "name",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        148,
        874,
      ],
      "type": "text",
    },
    {
      "align": "left",
      "baseline": "top",
      "content": "Design Engineer",
      "fill": "#C9C9C9",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "role",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        148,
        934,
      ],
      "type": "text",
    },
  ],
  "t": 0.25,
}
`;

exports[`example scenes golden snapshots > lower-third evaluates deterministically 3`] = `
{
  "ops": [
    {
      "fill": "#FF4D00",
      "height": 110,
      "id": "bar",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        120,
        860,
      ],
      "type": "rect",
      "width": 6,
    },
    {
      "align": "left",
      "baseline": "top",
      "content": "Kiyeon Jeon",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 48,
      "fontWeight": 700,
      "id": "name",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        148,
        874,
      ],
      "type": "text",
    },
    {
      "align": "left",
      "baseline": "top",
      "content": "Design Engineer",
      "fill": "#C9C9C9",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "role",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        148,
        934,
      ],
      "type": "text",
    },
  ],
  "t": 0.5,
}
`;

exports[`example scenes golden snapshots > lower-third evaluates deterministically 4`] = `
{
  "ops": [
    {
      "fill": "#FF4D00",
      "height": 110,
      "id": "bar",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        120,
        860,
      ],
      "type": "rect",
      "width": 6,
    },
    {
      "align": "left",
      "baseline": "top",
      "content": "Kiyeon Jeon",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 48,
      "fontWeight": 700,
      "id": "name",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        148,
        874,
      ],
      "type": "text",
    },
    {
      "align": "left",
      "baseline": "top",
      "content": "Design Engineer",
      "fill": "#C9C9C9",
      "fontFamily": "Inter",
      "fontSize": 28,
      "fontWeight": 400,
      "id": "role",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        148,
        934,
      ],
      "type": "text",
    },
  ],
  "t": 0.75,
}
`;

exports[`example scenes golden snapshots > lower-third evaluates deterministically 5`] = `
{
  "ops": [],
  "t": 1,
}
`;

exports[`example scenes golden snapshots > transition evaluates deterministically 1`] = `
{
  "ops": [
    {
      "fill": "#16324F",
      "height": 1080,
      "id": "bgA",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter One",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleA",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#3B1F47",
      "height": 1080,
      "id": "bgB",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        1920,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "fill": "#FF4D00",
      "height": 1080,
      "id": "sweep",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        -200,
        0,
      ],
      "type": "rect",
      "width": 160,
    },
  ],
  "t": 0,
}
`;

exports[`example scenes golden snapshots > transition evaluates deterministically 2`] = `
{
  "ops": [
    {
      "fill": "#16324F",
      "height": 1080,
      "id": "bgA",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter One",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleA",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#3B1F47",
      "height": 1080,
      "id": "bgB",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        1920,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "fill": "#FF4D00",
      "height": 1080,
      "id": "sweep",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        -200,
        0,
      ],
      "type": "rect",
      "width": 160,
    },
  ],
  "t": 0.25,
}
`;

exports[`example scenes golden snapshots > transition evaluates deterministically 3`] = `
{
  "ops": [
    {
      "fill": "#16324F",
      "height": 1080,
      "id": "bgA",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        -1860,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter One",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleA",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        -900,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#3B1F47",
      "height": 1080,
      "id": "bgB",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        60,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter Two",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleB",
      "letterSpacing": 0,
      "opacity": 0.96875,
      "transform": [
        1,
        0,
        0,
        1,
        1020,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#FF4D00",
      "height": 1080,
      "id": "sweep",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        2047.5,
        0,
      ],
      "type": "rect",
      "width": 160,
    },
  ],
  "t": 0.5,
}
`;

exports[`example scenes golden snapshots > transition evaluates deterministically 4`] = `
{
  "ops": [
    {
      "fill": "#16324F",
      "height": 1080,
      "id": "bgA",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        -1920,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter One",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleA",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        -960,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#3B1F47",
      "height": 1080,
      "id": "bgB",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter Two",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleB",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#FF4D00",
      "height": 1080,
      "id": "sweep",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        2120,
        0,
      ],
      "type": "rect",
      "width": 160,
    },
  ],
  "t": 0.75,
}
`;

exports[`example scenes golden snapshots > transition evaluates deterministically 5`] = `
{
  "ops": [
    {
      "fill": "#16324F",
      "height": 1080,
      "id": "bgA",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        -1920,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter One",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleA",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        -960,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#3B1F47",
      "height": 1080,
      "id": "bgB",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "rect",
      "width": 1920,
    },
    {
      "align": "center",
      "baseline": "middle",
      "content": "Chapter Two",
      "fill": "#FFFFFF",
      "fontFamily": "Inter",
      "fontSize": 110,
      "fontWeight": 800,
      "id": "titleB",
      "letterSpacing": 0,
      "opacity": 1,
      "transform": [
        1,
        0,
        0,
        1,
        960,
        540,
      ],
      "type": "text",
    },
    {
      "fill": "#FF4D00",
      "height": 1080,
      "id": "sweep",
      "offsetX": -0,
      "offsetY": -0,
      "opacity": 1,
      "radius": 0,
      "transform": [
        1,
        0,
        0,
        1,
        2120,
        0,
      ],
      "type": "rect",
      "width": 160,
    },
  ],
  "t": 1,
}
`;
